namespace SistemaTutoria.Patrones.Factory;

public interface Notificacion
{
    void Enviar(string destinatario, string mensaje);
}
